--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=Fraxen
 
-server.port=80
+server.port=8080
 server.address=0.0.0.0
+server.forward-headers-strategy=framework
