--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
 			<version>1.18.42</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
